@startuml

interface computerBuilder
class computer
class advancedComputer
class middleComputer
class lowComputer
class director


computerBuilder <|-- advancedComputer
computerBuilder <|-- middleComputer
computerBuilder <|-- lowComputer

computerBuilder o-- director
computer *-- advancedComputer
computer *-- middleComputer
computer *-- lowComputer
computer <.. computerBuilder





@enduml